--- a/registrationform.html
+++ b/registrationform.html
@@ -1,53 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Registration Form</title>
+  <style>
+    body {
+      background: #f4f8fc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .form-container {
+      background: #fff;
+      padding: 20px 30px;
+      border-radius: 8px;
+      width: 320px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    label {
+      display: block;
+      margin: 14px 0 4px;
+      color: #555;
+      font-weight: bold;
+    }
+    input, button {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 6px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+    button {
+      background: #3498db;
+      color: #fff;
+      margin-top: 14px;
+      font-size: 16px;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+  </style>
 </head>
 <body>
-    <center>
-    <h2>Registration Form</h2>
+  <div class="form-container">
+    <h1>Registration Form</h1>
+    <form action="#register" method="post">
+      <label for="fullname">Full Name:</label>
+      <input type="text" id="fullname" name="fullname" >
 
-    <form>
+      <label for="dob">Date of Birth:</label>
+      <input type="date" id="dob" name="dob">
 
-      <fieldset style="width: 50%;">
-        <legend></legend>
-        <p>First Name: <input type="text" name="firstName"></p>
-        <p>Last Name: <input type="text" name="lastName"></p>
-        <p>Password: <input type="text" name="Password"></p>
-        <p>Confirm Password: <input type="text" name="password"></p>
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone">
 
-      <br>
-      <fieldset style="width: 50%;">
-        <legend><b>Bank Info</b></legend>
-        <p>Account Number: <input type="text" name="roll"></p>
-        <p>Nominee:
-          <select name="nominee">
-            <option value="">Select</option>
-            <option>Student</option>
-            <option>Working Professions</option>
-            <option>Multi-user</option>
-          </select>
-        </p>
-        <p>Account Type:
-          <select name="accounttype">
-            <option value="">Select</option>
-            <option>Current</option>
-            <option>Savings</option>
-          </select>
-        </p>
-        <p>Mobile Number: <input type="text" name="mobile"></p>
-      </fieldset>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
 
-      <br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password">
 
-      <p>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-      </p>
+      <label for="confirm-password">Confirm Password:</label>
+      <input type="password" id="confirm-password" name="confirm_password">
 
+      <button type="submit">Register</button>
     </form>
-  </center>
+  </div>
 </body>
 </html>
