--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         </table>
     </section>
     <hr>
-    <section id="Contact">
+    <section id="contact">
         <h3> CONTACT ME</h3>
         <p>+91 7010646008 Madurai,TamilNadu</p>
+        <nav style="text-align: center;background-color: tomato;padding: 10px;"><h3><a href="contact.html"> CLICK HERE</a></h3></nav>
     </section>
 </body>
 </html>
